Changes:

20220510
- several small updates

20220411
- various small changes

20220323
- add fixed lksudoku's fix to Chaining
- add step timings in hints output

20220316
- small code tidy up

20220307
- changes in Chaining.java, may affect some ratings!

20220209
- add Check uniqueness only

20220202
- re-enable some solving techniques
- re-enable thread priority in Solver

20220112
- add chains nodes in hints output

20211125
- change to hints output

20211116
- revert an earlier change

20211109
- detect possible corrupted config (json) file

20211019
- a few cosmetic changes

20210921
- hints improvements
- built using jdk-8u301

20210405
- a few cosmetic changes

20210316
- a few fixes, and a few improvements

20210118
- some small fixes, changes, improvements:
- Dark theme, 'Restart...' and 'Save as image...' options, 'Apply Singles' button

20200915
- fixed one old bug, and other small changes

20191118
- re-enabled commented out techniques, 8 solving techniques are disabled
- changed to PLAIN font for GUI grid, black given cells, blue solved cells

20191104
- disabled changing thread priority in Solver.
- made Full Symmetry only initial option in GenerateDialog.
- changed ratings Naked and Hidden: Quintuplets, Sextuplets, Septuplets (5.4) - septuplets are disabled.
- changed ratings Fishes: Starfishes, Whales, Leviathans (5.5).
- added support for 0-9A-F, 1-9A-G, 1-16 puzzle formats, in GUI only.
- added Naked Octuplet, Hidden Octuplet, Loch Ness Monster (5.6) - all are elusive, and disabled.
- slightly improved SolvingTechnique, NakedSingle, Chaining, Grid.
- fixed parallel processing threads finishing order

20191015
- modified to solve 16x16 sudokus: grid is A-P for given, . or 0 for empty cell
- disabled Unique Loops (UL), Aligned Pair Exclusion (APE) and AlignedTripletExclusion (ATE) - this is because of software limitations in Permutations.java.
- added Direct Hidden Quads, with rating of 4.3.