@@ -440,6 +440,11 @@ public class SudokuPanel extends JPanel {
             col = Color.darkGray;
         if (cell == selectedCell && value == focusedCandidate)
             col = Color.black;
+        if ( Settings.getInstance().isShowingCandidateMasks() ) {
+            if ( null != selectedCell && selectedCell.getValue() == value ) {
+                col = Color.red;
+            }
+        }
         g.setColor(col);
         return isHighlighted;
     }
@@ -492,25 +497,25 @@ public class SudokuPanel extends JPanel {
             col = Color.orange;
         else if (cell == focusedCell)
             col = Color.yellow;
-        else {
-            boolean showing = Settings.getInstance().isShowingCandidateMasks();
-            if ( showing == true ) {
-                // Selected candidates color
-                int value = -1;
-                if (null != selectedCell) {
-                    value = selectedCell.getValue();
-                }
-                if ( value > 0 ) {
-                    if ( value == cell.getValue()) {
-                        col = candidateMaskColor;
-                    }
-                    else
-                    if ( cell.hasPotentialValue(value)) {
-                        col = potentialMaskColor;
-                    }
-                }
-            }
-        }
+    /// else {
+    ///     boolean showing = Settings.getInstance().isShowingCandidateMasks();
+    ///     if ( showing == true ) {
+    ///         // Selected candidates color
+    ///         int value = -1;
+    ///         if (null != selectedCell) {
+    ///             value = selectedCell.getValue();
+    ///         }
+    ///         if ( value > 0 ) {
+    ///             if ( value == cell.getValue()) {
+    ///                 col = candidateMaskColor;
+    ///             }
+    ///             else
+    ///             if ( cell.hasPotentialValue(value)) {
+    ///                 col = potentialMaskColor;
+    ///             }
+    ///         }
+    ///     }
+    /// }
         g.setColor(col);
     }
 
@@ -525,23 +530,23 @@ public class SudokuPanel extends JPanel {
     //  else if (cell == focusedCell)
     //      col = Color.yellow;
     //  else {
-            boolean showing = Settings.getInstance().isShowingCandidateMasks();
-            if ( showing == true ) {
-                // Selected candidates color
-                int value = -1;
-                if (null != selectedCell) {
-                    value = selectedCell.getValue();
-                }
-                if ( value > 0 ) {
-                    if ( value == cell.getValue()) {
-                        col = candidateMaskColor;
-                    }
-                    else
-                    if ( cell.hasPotentialValue(value)) {
-                        col = potentialMaskColor;
-                    }
-                }
-            }
+    ///     boolean showing = Settings.getInstance().isShowingCandidateMasks();
+    ///     if ( showing == true ) {
+    ///         // Selected candidates color
+    ///         int value = -1;
+    ///         if (null != selectedCell) {
+    ///             value = selectedCell.getValue();
+    ///         }
+    ///         if ( value > 0 ) {
+    ///             if ( value == cell.getValue()) {
+    ///                 col = candidateMaskColor;
+    ///             }
+    ///             else
+    ///             if ( cell.hasPotentialValue(value)) {
+    ///                 col = potentialMaskColor;
+    ///             }
+    ///         }
+    ///     }
     //  }
         g.setColor(col);
     }
